--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -7,9 +7,9 @@
 }
 
 .banner__title {
-  font-family: "oswald-regular", Arial, sans-serif;
+  font-family: "oswald-regular", "Arial", sans-serif;
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
-  color: #fff;
+  color: #ffffff;
 }
