--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,13 +3,15 @@
 @import "mixins.scss";
 @import "custom-normalize.scss";
 @import "default.scss";
-@import "header.scss";
-@import "main-nav.scss";
-@import "banner.scss";
-@import "program.scss";
-@import "advantages.scss";
-@import "social.scss";
-@import "footer.scss";
-@import "copyright.scss";
-@import "catalog.scss";
-
+@import "buttons.scss";
+@import "heading.scss";
+@import "./blocks/header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/banner.scss";
+@import "./blocks/program.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/social.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/copyright.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/show-more.scss";
