--- a/source/sass/default.scss
+++ b/source/sass/default.scss
@@ -1,73 +1,7 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: $Black;
   background-color: #ffffff;
 }
-
-h1 {
-  font-family: "oswald-regular", Arial, sans-serif;
-  font-size: 36px;
-  line-height: 36px;
-  color: #ffffff;
-}
-
-h2 {
-  font-family: "oswald-regular", Arial, sans-serif;
-  font-size: 36px;
-  line-height: 60px;
-  color: $Black;
-}
-
-h3 {
-  font-family: "oswald-regular", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 16px;
-  color: $Black;
-  text-transform: uppercase;
-}
-
-.button {
-  display: inline-block;
-  padding: 13px 25px;
-  font-family: "oswald-regular", Arial, sans-serif;
-  font-size: 14px;
-  line-height: 18px;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: center;
-  background-color: $Green;
-  color: #ffffff;
-  transition: 0.3s;
-
-  &:hover {
-    background-color: #5eaa2f;
-    transition: 0.3s;
-  }
-
-  &:active {
-    color: rgba(255, 255, 255, 0.3);
-    background-color: #5eaa2f;
-  }
-
-}
-
-.button--grey {
-  color: #444444;
-  background-color: $Grey;
-
-  &:hover {
-    background-color: #ebebeb;
-  }
-
-  &:active {
-    color: #b9b9b9;
-    background-color: #ebebeb;
-  }
-
-}
-
-
-
-
