--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,14 +1,13 @@
 @mixin hidden() {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  bottom: 0;
-  padding: 0;
+  // width: 1px;
+  // height: 1px;
+  // margin: -1px;
+  // bottom: 0;
+  // padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 @mixin flex-center() {
