--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,8 +2,17 @@
   background-color: $Grey;
 }
 
+.footer__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 20px 22px 20px;
+}
+
 .footer__logo {
-  svg{
+  margin-bottom: 30px;
+
+  svg {
     path {
       fill: $Black;
     }
@@ -15,5 +24,23 @@
 
   &:active {
     opacity: 0.6;
+  }
+}
+
+/* =====================================================================================
+Media min-width: 768px*/
+
+@media (min-width: 768px) {
+  .footer__content {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .footer__logo {
+    margin-bottom: 0;
+
+    svg {
+      width: 132px;
+    }
   }
 }
