--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,8 +3,8 @@
 @import "mixins.scss";
 @import "custom-normalize.scss";
 @import "default.scss";
-@import "buttons.scss";
-@import "heading.scss";
+@import "./blocks/button.scss";
+@import "./blocks/heading.scss";
 @import "./blocks/header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/banner.scss";
