--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -1,16 +1,33 @@
+.program__content {
+  padding: 0 20px;
+}
+
 .program__item {
+  position: relative;
   padding: 22px 20px;
   background-color: $Grey;
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .program__description {
+  margin-bottom: 20px;
   padding-bottom: 22px;
   border-bottom: 1px solid #d9d9d9;
 }
 
+.program__title {
+  margin-top: 15px;
+  margin-bottom: 35px;
+  padding-left: 70px;
+}
+
 .program__link {
   position: relative;
-  padding-right: 38px;
+  padding-right: 44px;
   font-family: "oswald-regular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 16px;
@@ -45,8 +62,11 @@
 }
 
 .program__image {
+  position: absolute;
+  left: 22px;
+  top: 24px;
+
   @include flex-center();
-  position: relative;
   width: 50px;
   height: 50px;
   background-color: $Green;
@@ -67,4 +87,115 @@
 .program__image--mass svg {
   width: 67px;
   height: 28px;
+}
+
+/* =====================================================================================
+Media min-width: 768px*/
+
+@media (min-width: 768px) {
+  .program__item {
+    padding: 80px 262px 62px 50px;
+  }
+
+  .program__title {
+    margin-top: 0;
+    padding-left: 0;
+    margin-bottom: 26px;
+    font-size: 36px;
+    line-height: 37px;
+  }
+
+  .program__description {
+    width: 370px;
+    margin-bottom: 60px;
+    border-bottom: none;
+    padding: 0;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .program__link {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .program__image {
+    width: 200px;
+    height: 200px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: auto;
+    right: 60px;
+
+    svg {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-57%);
+    }
+  }
+
+  .program__image--mass {
+    svg {
+      width: 268px;
+      height: 112px;
+    }
+  }
+
+  .program__image--slim {
+    svg {
+      width: 140px;
+      height: 194px;
+    }
+  }
+}
+
+/* =====================================================================================
+Media min-width: 1300px*/
+
+@media (min-width: 1300px) {
+  .program__list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .program__item {
+    width: 570px;
+    margin: 0;
+    padding: 45px 52px 62px 52px;
+  }
+
+  .program__title {
+    margin-top: 35px;
+    margin-bottom: 70px;
+    padding-left: 60px;
+    text-align: center;
+  }
+
+  .program__image {
+    left: 52px;
+    top: 46px;
+    right: auto;
+    width: 100px;
+    height: 100px;
+    transform: none;
+  }
+
+  .program__image--mass {
+    svg {
+      width: 134px;
+      height: 56px;
+    }
+  }
+
+  .program__image--slim {
+    svg {
+      width: 70px;
+      height: 97px;
+    }
+  }
+
+  .program__description {
+    margin-bottom: 35px;
+    width: 100%;
+  }
 }
