--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,19 +1,33 @@
 .social {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   padding: 22px 0;
+  margin-bottom: 22px;
   border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
 }
 
+.social__item {
+  margin-right: 35px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
 .social__link {
   svg {
-    path, circle{
+    path,
+    circle {
       fill: #666666;
     }
   }
 
   &:hover {
     svg {
-      path, circle{
+      path,
+      circle {
         fill: $Green;
       }
     }
@@ -21,5 +35,24 @@
 
   &:active {
     opacity: 0.3;
+  }
+}
+
+/* =====================================================================================
+Media min-width: 768px*/
+
+@media (min-width: 768px) {
+
+  .social {
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .social__link {
+    svg {
+      width: 30px;
+      height: 30px;
+    }
   }
 }
